fix(arc-1952): fix alignment spacecard descriptions

--- a/src/modules/shared/components/VisitorSpaceCardList/VisitorSpaceCardList.module.scss
+++ b/src/modules/shared/components/VisitorSpaceCardList/VisitorSpaceCardList.module.scss
@@ -5,6 +5,7 @@ $component: "c-visitor-space-card-list";
 .#{$component} {
 	display: grid;
 	list-style: none;
+	grid-template-columns: minmax(0, 1fr);
 	margin: 0;
 	padding: 0;
 	row-gap: $spacer-md;
